tests/integration/snapshots/integration__conformance__n_array_double_extra_comma.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["x",,]
stderr ---
error: expected json value, found `,`
 --> stdin:1:6
  |
1 | ["x",,]
  |     -^
  |     |
  |     expected due to `,`
